--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cv",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://moshkinura.github.io/CV/",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
@@ -32,6 +33,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -68,6 +70,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
