--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
   "name": "cv",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "private": true,
   "homepage": "https://moshkinura.github.io/CV/",
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
-    "@fortawesome/free-brands-svg-icons": "^6.0.0-beta3",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@babel/core": "^7.17.8",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@svgr/webpack": "^5.5.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "babel-jest": "^27.4.2",
-    "babel-loader": "^8.2.3",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.4",
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "bootstrap": "^5.1.3",
-    "browserslist": "^4.18.1",
-    "camelcase": "^6.2.1",
+    "browserslist": "^4.20.2",
+    "camelcase": "^6.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
+    "eslint": "^8.11.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^10.0.1",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -51,21 +53,22 @@
     "react-bootstrap": "^2.1.1",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.1",
     "react-refresh": "^0.11.0",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.2.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^12.6.0",
     "semver": "^7.3.5",
-    "source-map-loader": "^3.0.0",
+    "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.2",
-    "terser-webpack-plugin": "^5.2.5",
+    "tailwindcss": "^3.0.23",
+    "terser-webpack-plugin": "^5.3.1",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.64.4",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1"
+    "webpack": "^5.70.0",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-manifest-plugin": "^4.1.1",
+    "workbox-webpack-plugin": "^6.5.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
