--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-i18next": "^11.16.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.2",
+    "react-yandex-metrika": "^2.6.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.6.0",
