--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "private": true,
   "homepage": "https://moshkinura.github.io/CV/",
   "dependencies": {
@@ -12,7 +12,7 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.10",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
@@ -24,7 +24,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.5.0",
+    "react-i18next": "^14.0.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "typescript": "^5.3.3"
