--- a/cv-new/package.json
+++ b/cv-new/package.json
@@ -10,8 +10,8 @@
 		"lint": "prettier --check .",
 		"format": "prettier --loglevel warn --write \"**/*.{jsx,js,tsx,ts}\"",
 		"preview": "vite preview",
-		"deploy": "gh-pages -d build",
-		"predeploy": "yarn build"
+		"predeploy": "yarn build",
+		"deploy": "gh-pages -d build"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -38,12 +38,13 @@
 		"eslint": "^9.14.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
+		"gh-pages": "^6.2.0",
 		"globals": "^15.12.0",
 		"prettier": "^3.3.3",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"typescript": "~5.6.3",
-		"typescript-eslint": "^8.13.0",
-		"vite": "^5.4.10",
+		"typescript-eslint": "^8.14.0",
+		"vite": "^5.4.11",
 		"vite-plugin-inspect": "^0.8.7"
 	}
 }
