--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"format": "prettier --loglevel warn --write \"**/*.{jsx,js,tsx,ts}\"",
 		"preview": "vite preview",
 		"predeploy": "yarn build",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
