--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build --mode production",
+		"build:dev": "tsc && vite build --mode development",
 		"lint": "prettier --check .",
 		"format": "prettier --loglevel warn --write \"**/*.{jsx,js,tsx,ts}\"",
 		"preview": "vite preview",
@@ -34,6 +35,7 @@
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.0",
 		"@rollup/plugin-terser": "^0.4.4",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/node": "^22.9.0",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react": "^4.3.3",
@@ -42,11 +44,13 @@
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"gh-pages": "^6.2.0",
 		"globals": "^15.12.0",
+		"path": "^0.12.7",
 		"prettier": "^3.3.3",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"typescript": "~5.6.3",
 		"typescript-eslint": "^8.14.0",
 		"vite": "^5.4.11",
+		"vite-plugin-imagemin": "^0.6.1",
 		"vite-plugin-inspect": "^0.8.7"
 	}
 }
