--- a/package.json
+++ b/package.json
@@ -12,59 +12,43 @@
 		"format": "prettier --loglevel warn --write \"**/*.{jsx,js,tsx,ts}\"",
 		"preview": "vite preview",
 		"predeploy": "yarn build",
-		"deploy": "gh-pages -d dist"
+		"deploy": "gh-pages -d dist",
+		"cleanvite": "vite clean",
+		"check:unused": "ts-prune",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
-		"@radix-ui/react-accordion": "^1.2.11",
-		"@radix-ui/react-alert-dialog": "^1.1.14",
-		"@radix-ui/react-aspect-ratio": "^1.1.7",
-		"@radix-ui/react-avatar": "^1.1.10",
-		"@radix-ui/react-checkbox": "^1.3.2",
-		"@radix-ui/react-collapsible": "^1.1.11",
-		"@radix-ui/react-context-menu": "^2.2.15",
-		"@radix-ui/react-dialog": "^1.1.14",
-		"@radix-ui/react-dropdown-menu": "^2.1.15",
-		"@radix-ui/react-hover-card": "^1.1.14",
-		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-menubar": "^1.1.15",
-		"@radix-ui/react-navigation-menu": "^1.2.13",
-		"@radix-ui/react-popover": "^1.1.14",
-		"@radix-ui/react-progress": "^1.1.7",
-		"@radix-ui/react-radio-group": "^1.3.7",
-		"@radix-ui/react-scroll-area": "^1.2.9",
-		"@radix-ui/react-select": "^2.2.5",
-		"@radix-ui/react-separator": "^1.1.7",
-		"@radix-ui/react-slider": "^1.3.5",
-		"@radix-ui/react-slot": "^1.2.3",
-		"@radix-ui/react-switch": "^1.2.5",
-		"@radix-ui/react-tabs": "^1.1.12",
-		"@radix-ui/react-toast": "^1.2.14",
-		"@radix-ui/react-toggle": "^1.1.9",
-		"@radix-ui/react-toggle-group": "^1.1.10",
-		"@radix-ui/react-tooltip": "^1.2.7",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
-		"i18next": "^25.3.4",
+		"i18next": "^25.3.6",
 		"i18next-browser-languagedetector": "^8.2.0",
 		"lucide-react": "^0.539.0",
+		"radix-ui": "^1.4.3",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-i18next": "^15.6.1",
-		"react-markdown": "^10.1.0",
-		"react-router-dom": "^7.8.0",
-		"sonner": "^2.0.7",
+		"react-router-dom": "^7.8.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.33.0",
-		"@ianvs/prettier-plugin-sort-imports": "^4.6.1",
+		"@ianvs/prettier-plugin-sort-imports": "^4.6.2",
+		"@swc/core": "^1.13.3",
+		"@swc/jest": "^0.2.39",
 		"@tailwindcss/typography": "^0.5.16",
-		"@tailwindcss/vite": "^4.1.11",
+		"@tailwindcss/vite": "^4.1.12",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.7.0",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
-		"@types/node": "^24.2.1",
-		"@types/react": "^19.1.9",
+		"@types/jest": "^30.0.0",
+		"@types/node": "^24.3.0",
+		"@types/react": "^19.1.10",
 		"@types/react-dom": "^19.1.7",
 		"@vitejs/plugin-react": "^5.0.0",
 		"eslint": "^9.33.0",
@@ -72,13 +56,18 @@
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"gh-pages": "^6.3.0",
 		"globals": "^16.3.0",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^30.0.5",
+		"jest-environment-jsdom": "^30.0.5",
 		"path": "^0.12.7",
 		"prettier": "^3.6.2",
 		"rollup-plugin-visualizer": "^6.0.3",
-		"tailwindcss": "^4.1.11",
+		"tailwindcss": "^4.1.12",
+		"ts-jest": "^29.4.1",
+		"ts-prune": "^0.10.3",
 		"typescript": "~5.9.2",
 		"typescript-eslint": "^8.39.1",
-		"vite": "^7.1.1",
+		"vite": "^7.1.2",
 		"vite-plugin-imagemin": "^0.6.1",
 		"vite-plugin-inspect": "^11.3.2",
 		"vite-tsconfig-paths": "^5.1.4"
