--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
 		"date-fns": "^4.1.0",
 		"i18next": "^25.3.6",
 		"i18next-browser-languagedetector": "^8.2.0",
-		"lucide-react": "^0.539.0",
+		"lucide-react": "^0.540.0",
 		"radix-ui": "^1.4.3",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-i18next": "^15.6.1",
 		"react-router-dom": "^7.8.1",
 		"tailwind-merge": "^3.3.1",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.33.0",
