--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
 		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.85.3",
+		"@tanstack/react-query": "^5.85.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
-		"i18next": "^25.3.6",
+		"i18next": "^25.4.0",
 		"i18next-browser-languagedetector": "^8.2.0",
 		"lucide-react": "^0.540.0",
 		"radix-ui": "^1.4.3",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
-		"react-i18next": "^15.6.1",
+		"react-i18next": "^15.7.1",
 		"react-router-dom": "^7.8.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7",
@@ -39,26 +39,37 @@
 	"devDependencies": {
 		"@eslint/js": "^9.33.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.6.2",
-		"@swc/core": "^1.13.3",
+		"@swc/core": "^1.13.4",
 		"@swc/jest": "^0.2.39",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.12",
 		"@testing-library/dom": "^10.4.1",
-		"@testing-library/jest-dom": "^6.7.0",
+		"@testing-library/jest-dom": "^6.8.0",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
+		"@types/imagemin-gifsicle": "^7.0.4",
+		"@types/imagemin-mozjpeg": "^8.0.4",
+		"@types/imagemin-pngquant": "^8.0.0",
+		"@types/imagemin-svgo": "^11.0.0",
+		"@types/imagemin-webp": "^7.0.3",
 		"@types/jest": "^30.0.0",
 		"@types/node": "^24.3.0",
 		"@types/react": "^19.1.10",
 		"@types/react-dom": "^19.1.7",
-		"@vitejs/plugin-react": "^5.0.0",
+		"@vheemstra/vite-plugin-imagemin": "^2.2.0",
+		"@vitejs/plugin-react": "^5.0.1",
 		"eslint": "^9.33.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"gh-pages": "^6.3.0",
 		"globals": "^16.3.0",
 		"identity-obj-proxy": "^3.0.0",
+		"imagemin-gifsicle": "^7.0.0",
+		"imagemin-mozjpeg": "^10.0.0",
+		"imagemin-pngquant": "^10.0.0",
+		"imagemin-svgo": "^11.0.1",
+		"imagemin-webp": "^8.0.0",
 		"jest": "^30.0.5",
 		"jest-environment-jsdom": "^30.0.5",
 		"path": "^0.12.7",
@@ -68,9 +79,8 @@
 		"ts-jest": "^29.4.1",
 		"ts-prune": "^0.10.3",
 		"typescript": "~5.9.2",
-		"typescript-eslint": "^8.39.1",
-		"vite": "^7.1.2",
-		"vite-plugin-imagemin": "^0.6.1",
+		"typescript-eslint": "^8.40.0",
+		"vite": "^7.1.3",
 		"vite-plugin-inspect": "^11.3.2",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
